[CTW] Transform cache does not get updated when setting a transform
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox101 | --- | fixed |
People
(Reporter: Jamie, Assigned: Jamie)
References
Details
(Whiteboard: [ctw-m2])
Attachments
(1 file)
We have accessible/tests/browser/bounds/browser_test_simple_transform.js for this. However, even though this is broken (verified manually), this wasn't failing with CTW enabled because of a bug in testBoundsInContent; see bug 1765460 comment 4. Once my patch to fix that bug lands, these tests will fail with CTW enabled.
Assignee | ||
Comment 1•3 years ago
|
||
A bit of debugging reveals that newStyle->StyleDisplay()->HasTransformStyle() returns true, but frame->IsTransformed() returns false. I wonder if the transform happens async; i.e. after DidSetComputedStyle returns. Or perhaps it just happens later in DidSetComputedStyle; the a11y notification is right at the top. newStyle->StyleDisplay()->HasTransform(frame) returns true, so I think we can use that. I think an earlier version of the patch did that, but it was changed because we thought frame->IsTransformed() would achieve the same in this case. It appears we were wrong.
Assignee | ||
Comment 2•3 years ago
|
||
The frame might not be transformed yet when MaybeQueueCacheUpdateForStyleChanges is called.
In that case, frame->IsTransformed() will return false.
However, newStyle->StyleDisplay()->HasTransform(frame) returns true, so we can use that.
Updated•3 years ago
|
Comment 4•3 years ago
|
||
bugherder |
Description
•