Bug 1765944: Fix transform cache updates. r=morgan

The frame might not be transformed yet when MaybeQueueCacheUpdateForStyleChanges is called.
In that case, frame->IsTransformed() will return false.
However, newStyle->StyleDisplay()->HasTransform(frame) returns true, so we can use that.

Differential Revision: https://phabricator.services.mozilla.com/D144429